# bluephingr

./: .gitignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md
phingr-cli/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
phingr-cli/app/: api.py  config.py  engine.py  flow_builder.py  phingr_client.py  server.py
phingr-cli/app/static/: app.js  index.html  style.css
phingr-cli/examples/: README.md  bt_toggle_stress.py  dynamic_session.py  lifecycle_test.py  open-bluetooth.yaml  reset-home.yaml  setup_bundle.py  toggle-bluetooth.yaml
phingr-cli/phingr/: __init__.py  dsl.py  models.py  template_matcher.py
phingr-cli/util/: test-coords.sh  test-ocr.sh
phingr-device/: README.md
phingr-device/docs/: calibration.md  ios-hid-notes.md
phingr-device/hardware/: phingr_frame.scad
phingr-device/pico/: README.md  config.py  index.html  main.py  relays.py  server.py  wifi.py
phingr-device/rpi/hardware/: PhingrHW.FCStd
phingr-device/rpi/server/: capture_server.py  touch_server.py  updater.py  web_server.py
phingr-device/rpi/setup/: bootstrap.sh  phingr-capture.service  phingr-touch.service  phingr-updater.service  phingr-web.service  requirements.txt  setup_gadget.py  setup_gadget.sh  teardown_gadget.sh
phingr-device/rpi/util/: test_camera.py  test_composite_proper.py  test_consumer.py  test_gadget_swap.py  test_home_mouse.py  test_keyboard.py  test_keyboard_apple.py  test_keyboard_composite.py  test_keyboard_led.py  (+8 more)
phingr-web/: .env.example  .gitignore  deploy.sh  requirements.txt  server.py
phingr-web/static/: index.html  success.html
(+6 files in other folders)
