[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phingr"
version = "0.1.0"
description = "mobile UI automation via USB HID — YAML DSL + template matching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "pyyaml>=6.0",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
]

[tool.setuptools.packages.find]
include = ["phingr*"]
